// This file is part of arduino-cli.
//
// Copyright 2020 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to
// modify or otherwise use the software for commercial activities involving the
// Arduino software without disclosing the source code of your own applications.
// To purchase a commercial license, send an email to license@arduino.cc.

syntax = "proto3";

package cc.arduino.cli.notifications.v1;

option go_package = "github.com/arduino/arduino-cli/rpc/cc/arduino/cli/notifications/v1;notifications";

service NotificationsService {
  rpc GetNotifications(GetNotificationsRequest)
      returns (stream GetNotificationsResponse);
}

message GetNotificationsRequest {
  // List of notification the client wants to receive.
  // If left empty all notifications are sent, otherwise only those specified.
  repeated Notification filter = 1;
}

enum Notification {
  NOTIFICATION_UNSPECIFIED = 0;
  // Some new core/platform has been found in the hardware folder
  NOTIFICATION_CORE_CHANGED = 1;
}

message GetNotificationsResponse { Notification notification = 1; }